fix: Number overflow
- Add introduction of the project in comic style
- Minor CSS and JS updates

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,13 +6,17 @@ body {
 
 form {
   display: inline-block;
-  margin: 24px;
+  margin: 1rem;
+}
+
+textarea {
+  resize: vertical;
 }
 
 fieldset {
-  padding: 32px;
+  padding: 1rem;
 }
 
 legend {
-  font-size: 24px;
+  font-size: 1.5rem;
 }
